[package]
name = "hyper"
version = "0.1.0"
authors = ["anton_misa <anton_misa@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde_derive = "1.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"